--- a/configure.in
+++ b/configure.in
@@ -3,7 +3,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_INIT(yersinia, 0.7.2-svn, yersinia@yersinia.net)
+AC_INIT(yersinia, 0.7.3, yersinia@yersinia.net)
 
 AC_CONFIG_SRCDIR([src/yersinia.c])
 
