--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ language: c
 compiler:
   - gcc
   - clang
-# Change this to your needs
-script: ./configure && make
+
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libnet-dev libpcap-dev
+
+script: ./autogen.sh; ./configure && make
