Fixed warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE" (apparently with glibc 2.20) Fixed warning for redefinition of _REENTRANT

--- a/configure.in
+++ b/configure.in
@@ -15,7 +15,7 @@ AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 
 AC_PROG_CC
 if test -n "$GCC"; then
-     CFLAGS="-O3 -Wall -g"
+     CFLAGS="-O3 -Wall -g -D_DEFAULT_SOURCE"
 else
      AC_MSG_WARN(Ouch!! Only gcc is supported...)
      AC_MSG_ERROR(...you're on your own.)
