Fix autoconf warning
Fixes the following warning when running `autoreconf -i`:

    configure.ac:13: warning: AM_INIT_AUTOMAKE: two- and three-arguments forms are deprecated.  For more info, see:
    configure.ac:13: http://www.gnu.org/software/automake/manual/automake.html#Modernize-AM_005fINIT_005fAUTOMAKE-invocations

--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ AM_CONFIG_HEADER(src/config.h)
 
 AC_CANONICAL_TARGET([])
 
-AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
+AM_INIT_AUTOMAKE
 
 AC_PROG_CC
 if test -n "$GCC"; then
