--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ compiler:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y libnet-dev libpcap-dev
+  - sudo apt-get install -y gtk2.0 libgtk2.0-dev
 
 script: ./autogen.sh; ./configure --with-pcap-includes=/usr/include/ && make
 
