--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ addons:
       name: "tomac/yersinia"
       description: "Build submitted via Travis CI"
     notification_email: tomac@yersinia.net
-    build_command_prepend: "./configure"
+    build_command_prepend: "./autogen.sh && ./configure"
     build_command:   "make"
     branch_pattern: coverity_scan
